Removes all instances of the depercated use of the Integer(int) constructor.
The use of Integer(int) has been deprectaed in Java 9+. This removes all instances of this constructor and replaces them with calls to the static Integer.valueOf(int) method instead. This commit starts with Server.java.